--- a/gui/pom.xml
+++ b/gui/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>javafx-fxml</artifactId>
             <version>11-ea+25</version>
         </dependency>
+        <dependency>
+            <groupId>pl.psi</groupId>
+            <artifactId>model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
